8059390: code cache fills up for bigapps/Weblogic+medrec/nowarnings

Retrieve code heap in CodeCache::allocate(), ::report_codemem_full(), and ::unallocated_capacity()  also if segmented code cache is disabled.

Reviewed-by: vlivanov, thartmann